# godot_boapspace

./: .gitignore  AGENTS.md  export_release.sh  opencode.json  rungame.sh
future_plans/: cheat_page.md  tile_selection_signals.md
godot/: build_palette.tscn  building_info_panel.tscn  export_presets.cfg  game_world.tscn  godot_boapspace.gdextension  godot_boapspace.gdextension.uid  icon.svg.import  ingame_menu.tscn  main_ui.tscn  npc_info_panel.tscn  project.godot  (+5 more)
rust/godot_bridge/: Cargo.toml
rust/godot_bridge/src/: AGENTS.MD  assets.rs  building_info_panel.rs  building_palette.rs  entity_id.rs  game_state.rs  game_world.rs  ingame_menu.rs  lib.rs  npc_info_panel.rs  resource_header.rs  root_menu.rs  surface_selector.rs  tile_info_panel.rs
rust/godot_bridge/src/menu/: ingame_menu.rs  root_menu.rs
rust/godot_bridge/src/panel/: building_info_panel.rs  building_palette.rs  construction_dock.rs  housing_panel.rs  map_entity_tooltip_panel.rs  npc_details.rs  npc_info_panel.rs  performance_info.rs  resource_header.rs  resource_history_graph.rs  resource_panel.rs  resource_quantity.rs  resource_quantity_progress.rs  resource_tooltip.rs  roads_panel.rs  simulation_header_bar.rs  surface_selector.rs  task_list_panel.rs  task_table_view.rs  tile_info_panel.rs
rust/godot_bridge/src/world/: asset_smoke_test_3d.rs  game_world.rs  mesh_builder_3d.rs  model_library_3d.rs  model_wrapper_3d.rs  render_snapshot.rs  visual.rs  world_renderer_2d.rs  world_renderer_3d.rs  world_renderer_smoke_test.rs
rust/godot_bridge/tests/: visual_asset_manifest.rs  visual_asset_manifest_3d.rs
(+1674 files in other folders)
