[package]
name = "godot_boapspace_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_ecs = "0.19"
game_engine = { path = "../game_engine" }
godot = { version = "0.5", features = ["api-4-7", "register-docs"] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
